# SplineLibrary

./: CMakeLists.txt
interfaces/: spline_library_c.cpp  spline_library_c.h
spline_library/boost/: abs.hpp  assert.hpp  complex.hpp  config.hpp  cxx03_warn.hpp  error_handling.hpp  fp_traits.hpp  fpclassify.hpp  is_constant_evaluated.hpp  isinf.hpp  isnan.hpp  ldexp.hpp  math_fwd.hpp  next.hpp  policy.hpp  precision.hpp  promotion.hpp  real_cast.hpp  roots.hpp  round_fwd.hpp  sign.hpp  toms748_solve.hpp  trunc.hpp
spline_library/utils/: arclength.h  calculus.h
